--- a/docker/config/airflow.cfg
+++ b/docker/config/airflow.cfg
@@ -1,7 +1,7 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
-dags_folder = /usr/local/airflow/dags
+dags_folder = /usr/local/glenigan-aws-mwaa/dags
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package.function".
@@ -112,7 +112,7 @@ load_examples = True
 load_default_connections = True
 
 # Path to the folder containing Airflow plugins
-plugins_folder = /usr/local/airflow/plugins
+plugins_folder = /home/mattnlabuguen/glenigan-aws-mwaa/plugins
 
 # Should tasks be executed via forking of the parent process ("False",
 # the speedier option) or by spawning a new python process ("True" slow,
