Feat: implement ambervalley crawler

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-/git
-*.workspace
-dags/**/*.pyc
 /.idea
 /logs
+/git
+/requirements
 /db-data
-.DS_Store
-*.pyc
 /venv
-plugins/scripts/output/
+output/
+/startup_script
+/docker
+dags/**/*.pyc
+.DS_Store
+*.workspace
+*.pyc
+proxy_keys.json
+zyte-ca.crt
+test.py
+zipper.sh
